rewrite, better interface

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
     <body>
         <nav id="toolbar">
             <a class="tool" href="#" data-command='bold'>Bold</a>
-            <!--
-            <a class="tool" href="#" data-command='insertOrderedList'>Ordered list</a>
-            <a class="tool" href="#" data-command='insertUnorderedList'>Ordered list</a>
-            -->
+            <a class="tool" href="#" data-command='instruction'>Instruction</a>
+            <a class="tool" href="#" data-command='header'>Header</a>
             <a class="tool" href="#" data-command='note'>Note</a>
         </nav>
-        <div id="editor" contentEditable>
+        <div id="editor">
         </div>
         <div id="preview"></div>
         <script defer type="module" src="editor.js"></script>
